--- a/html/puppies.html
+++ b/html/puppies.html
@@ -227,7 +227,7 @@
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/IVIGbil9s-8/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/0V6nk7pMr8E/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosTlDf62sCnlPhZJHcUzutU&amp;rel=0;autoplay=1&amp;controls=1"
@@ -370,7 +370,7 @@
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/Ws50zXgwuIA/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/yF6F3bHwoOU/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koum2WmvbG1-U1z11LnKaCQ1&amp;rel=0;autoplay=1&amp;controls=0"
@@ -385,7 +385,7 @@
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/Wjvmq71WDGI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotNcvPOmSYI4mBjE8ydooF3&amp;rel=0;autoplay=1&amp;controls=0"
@@ -396,7 +396,7 @@
           <div class="col-lg-4 py-2">
             <h5>Brown Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/2UDJVBSi8LQ/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/2UDJVBSi8LQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kot41yx1a4Y2EA5rVoi_keRq&amp;rel=0;autoplay=1&amp;controls=0"
@@ -407,7 +407,7 @@
           <div class="col-lg-4 py-2">
             <h5>Green Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/Yvd6mDYOcL0/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/W_qhn3M8PZ4/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
@@ -420,7 +420,7 @@
           <div class="col-lg-4 py-2">
             <h5>Red Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/EoqlfGJoRHM/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/I7oFqNgM0vk/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosbNNVE4im2vxcSx_3xhso2&amp;rel=0;autoplay=1&amp;controls=0"
@@ -431,7 +431,7 @@
           <div class="col-lg-4 py-2">
             <h5>Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/VumzpDmEeDI/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/VumzpDmEeDI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouHUXnQjWLR9k3NkwLZW2OU&amp;rel=0;autoplay=1&amp;controls=0"
@@ -442,7 +442,7 @@
           <div class="col-lg-4 py-2">
             <h5>Yellow Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/JQs8ljxj-UY/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/l2E4p-ysNt8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovLsn9Xe3Jwqv1YCkMNDd8_&amp;rel=0;autoplay=1&amp;controls=0"
@@ -455,7 +455,7 @@
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/SduMKikowpg/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/SduMKikowpg/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovCrcQWetCifR4NinjYH9jl&amp;rel=0;autoplay=1&amp;controls=0"
@@ -466,7 +466,7 @@
           <div class="col-lg-4 py-2">
             <h5>White Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/rlco8TcYbSw/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/rhd3OT0POK8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovwuPzie8bzn19PBMSejScT&amp;rel=0;autoplay=1&amp;controls=0"
@@ -477,7 +477,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/9TsQ-5f8PEg/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/BL9kKpNlhlQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koul3gINxAty9m_wToBWTweP&amp;rel=0;autoplay=1&amp;controls=0"
@@ -490,7 +490,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/RDslEFHIIik/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/s3llHqME6L8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouWqSEWCp8CLL0esDLsMoyC&amp;rel=0;autoplay=1&amp;controls=0"
@@ -501,7 +501,7 @@
           <div class="col-lg-4 py-2">
             <h5>Orange Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/9TGEr_0oRh0/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/pq2n8fEXcrM/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotrnpbZ22nVBOpFjmrsUmaW&amp;rel=0;autoplay=1&amp;controls=0"
@@ -512,7 +512,7 @@
           <div class="col-lg-4 py-2">
             <h5>Tan Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/9ENKKU-BxAc/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/MEeEOEq1MHY/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosUyvx3hXYeXOElIY1q3hrJ&amp;rel=0;autoplay=1&amp;controls=0"
@@ -525,7 +525,7 @@
           <div class="col-lg-4 py-2">
             <h5>Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/f-Q6KVgMMTs/maxresdefault.jpg" class="bg-image" /> -->
+              <img alt="Image" src="http://i.ytimg.com/vi/ZSiuBe7UQVg/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kott7JjtVsMXu6uWCFLgWcRZ&amp;rel=0;autoplay=1&amp;controls=0"
