take home dates

--- a/html/puppies.html
+++ b/html/puppies.html
@@ -134,7 +134,7 @@
                   <p><strong>Est. Birth:</strong><span> Sept 26, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> Nov 28, 2021</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 19-20, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
@@ -181,7 +181,7 @@
                   <p><strong>Birth Date:</strong><span> Sept 20, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> Nov 21, 2021</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 12-13, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 35-40 lbs.</span></p>
