--- a/html/adopt.html
+++ b/html/adopt.html
@@ -100,7 +100,7 @@
             <div class="card py-3 px-xl-3">
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt</span>
-                <span class="d-block display-4 mb-2 text-dark">$2,500</span>
+                <span class="d-block display-4 mb-2 text-dark">$2,800</span>
                 <p>Customer responsible for all travel arrangements</p>
                 <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                   <input type="hidden" name="cmd" value="_cart">
@@ -128,8 +128,8 @@
           <div class="col-md-4">
             <div class="card py-3 px-xl-3">
               <div class="card-body">
-                <span class="h6 d-block">Cost to Adopt <i>(incl. Airport Pickup)</i></span>
-                <span class="d-block display-4 mb-2 text-dark">$2,800</span>
+                <span class="h6 d-block">Cost to Adopt <i>(Airport Pickup)</i></span>
+                <span class="d-block display-4 mb-2 text-dark">$3,100</span>
                 <p>We will meet you at the airport with everything you need</p>
                 <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                   <input type="hidden" name="cmd" value="_cart">
@@ -161,7 +161,7 @@
             <div class="card py-3 px-xl-3">
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt <i>(incl. Shipping)</i></span>
-                <span class="d-block display-4 text-dark mb-2">$2,950</span>
+                <span class="d-block display-4 text-dark mb-2">$-,---</span>
                 <!--<p>We can also make arrangements to ship your puppy via air cargo</p>-->
                 <p class="text-danger">Unfortunately we are not shipping puppies at this time</p>
                 <form method="GET" action="home.html">
